--- a/i210599_A2.ipynb
+++ b/i210599_A2.ipynb
@@ -9,40 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Rank                    Title                     Genre  \\\n",
-      "0     1  Guardians of the Galaxy   Action,Adventure,Sci-Fi   \n",
-      "1     2               Prometheus  Adventure,Mystery,Sci-Fi   \n",
-      "2     3                    Split           Horror,Thriller   \n",
-      "3     4                     Sing   Animation,Comedy,Family   \n",
-      "4     5            Suicide Squad  Action,Adventure,Fantasy   \n",
-      "\n",
-      "                                         Description              Director  \\\n",
-      "0  A group of intergalactic criminals are forced ...            James Gunn   \n",
-      "1  Following clues to the origin of mankind, a te...          Ridley Scott   \n",
-      "2  Three girls are kidnapped by a man with a diag...    M. Night Shyamalan   \n",
-      "3  In a city of humanoid animals, a hustling thea...  Christophe Lourdelet   \n",
-      "4  A secret government agency recruits some of th...            David Ayer   \n",
-      "\n",
-      "                                              Actors  Year  Runtime (Minutes)  \\\n",
-      "0  Chris Pratt, Vin Diesel, Bradley Cooper, Zoe S...  2014                121   \n",
-      "1  Noomi Rapace, Logan Marshall-Green, Michael Fa...  2012                124   \n",
-      "2  James McAvoy, Anya Taylor-Joy, Haley Lu Richar...  2016                117   \n",
-      "3  Matthew McConaughey,Reese Witherspoon, Seth Ma...  2016                108   \n",
-      "4  Will Smith, Jared Leto, Margot Robbie, Viola D...  2016                123   \n",
-      "\n",
-      "   Rating   Votes  Revenue (Millions)  Metascore  \n",
-      "0     8.1  757074              333.13       76.0  \n",
-      "1     7.0  485820              126.46       65.0  \n",
-      "2     7.3  157606              138.12       62.0  \n",
-      "3     7.2   60545              270.32       59.0  \n",
-      "4     6.2  393727              325.02       40.0  \n"
+      "Rank                  1000\n",
+      "Title                 1000\n",
+      "Genre                 1000\n",
+      "Description           1000\n",
+      "Director              1000\n",
+      "Actors                1000\n",
+      "Year                  1000\n",
+      "Runtime (Minutes)     1000\n",
+      "Rating                1000\n",
+      "Votes                 1000\n",
+      "Revenue (Millions)     872\n",
+      "Metascore              936\n",
+      "dtype: int64\n"
      ]
     }
    ],
@@ -55,7 +41,8 @@
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# Display the first few rows of the dataframe\n",
-    "print(df.head())\n"
+    "#print(df.head())\n",
+    "print( df.count() )\n"
    ]
   },
   {
